# nubank-client

./: .editorconfig  CHANGELOG.md  LICENSE  cabal.project.freeze  nubank-client.cabal
app/: Main.hs
src/: Discovery.hs  Nubank.hs  Prolog.hs
src/Discovery/: Application.hs
src/Internal/: Discovery.hs  Types.hs
src/Internal/Types/: Application.hs
src/Nubank/: Auth.hs  Authentication.hs  Discovery.hs  HttpClient.hs  Login.hs  Prolog.hs
src/Nubank/Auth/: Login.hs
src/Nubank/Discovery/: Application.hs
test/: Main.hs  Tests.hs
test/Tests/: Discovery.hs  Nubank.hs
test/Tests/Nubank/: Login.hs
test/Tests/Nubank/Auth/: Login.hs
