cabal-version:      3.0
name:               nubank-client
version:            0.1.0.0
synopsis:           A Haskell Client for the Nubank API
-- description:
homepage:           https://github.com/manchester-velten/nubank-client
license:            MIT
license-file:       LICENSE
author:             Ismael Velten
maintainer:         ismaelcarlosvelten@gmail.com
-- copyright:
category:           Finance
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Nubank
    other-modules:
        Nubank.Prolog,
        Nubank.Discovery,
        Nubank.Discovery.Application
    -- other-extensions:
    build-depends:
        base ^>=4.17.2.0,
        aeson,
        aeson-casing,
        http-conduit
    hs-source-dirs:   src
    default-language: Haskell2010

executable nubank-client
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base ^>=4.17.2.0,
        nubank-client

    hs-source-dirs:   app
    default-language: Haskell2010

test-suite nubank-client-test
    import:           warnings
    default-language: Haskell2010
    other-modules:    Tests, Tests.Discovery
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base ^>=4.17.2.0,
        nubank-client,
        tasty,
        tasty-hunit
