cabal-version:      3.0
name:               nubank-client
version:            0.1.0.0
synopsis:           A Haskell Client for the Nubank API
homepage:           https://github.com/manchester-velten/nubank-client
license:            MIT
license-file:       LICENSE
author:             Ismael Velten
maintainer:         ismaelcarlosvelten@gmail.com
category:           Finance
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common settings
    ghc-options: -Wall
    default-extensions:
        OverloadedStrings

library
    import:           settings
    exposed-modules:  Nubank, Nubank.Login
    other-modules:
        Nubank.Prolog,
        Nubank.Discovery,
        Nubank.Discovery.Application,
        Nubank.HttpClient
    build-depends:
        base ^>=4.17.2.0,
        aeson,
        aeson-casing,
        http-conduit,
        uuid,
        random,
        bytestring,
        time,
        qrcode-core
    hs-source-dirs:   src
    default-language: Haskell2010

executable nubank-client
    import:           settings
    main-is:          Main.hs
    build-depends:
        base ^>=4.17.2.0,
        nubank-client

    hs-source-dirs:   app
    default-language: Haskell2010

test-suite nubank-client-test
    import:           settings
    default-language: Haskell2010
    other-modules:    Tests, Tests.Nubank, Tests.Nubank.Login
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base ^>=4.17.2.0,
        nubank-client,
        tasty,
        tasty-hunit,
        aeson
